--- a/Cliente (Angular)/ElBancoDeLasPalabras/package.json
+++ b/Cliente (Angular)/ElBancoDeLasPalabras/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.1.0",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
