--- a/Cliente-Angular/package.json
+++ b/Cliente-Angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@popperjs/core": "^2.11.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
