(Server) Configuración y funcionamiento de mandar un correo

--- a/Servidor-SpringBoot/src/main/resources/application.properties
+++ b/Servidor-SpringBoot/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=elbancodelaspalabras@gmail.com
+spring.mail.password=ebdlpProject_10
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.jackson.serialization.write-dates-as-timestamps=true 
 
